# solidpython-library

./: BASICS.md  README.md  pyproject.toml  template.stl.py
examples/: fillet_library.py  thread_library.py
solidpython_library/: __init__.py  common.py  fillet.py  heatset_insert.py  rounded_cube.py  screwhole.py
