[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solidpython_library"
authors = [{name="Bernard Kerckenaere", email="bernieke@bernieke.com"}]
description = "A library for SolidPython2"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "solidpython2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["solidpython_library"]

[tool.setuptools.dynamic]
version = {file="VERSION"}
